# rules_foreign_cc-examples

./: .gitignore  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-rules_foreign_cc-examples  bazel-testlogs
.github/workflows/: build.yml
