module(
    name = "rules_foreign_cc-examples",
    version = "0.1.0",
)

bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

# this version has to support the current libc
llvm.toolchain(
   llvm_version = "18.1.4",
)

use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "folly",
    url = "https://github.com/facebook/folly/archive/refs/tags/v2025.04.21.00.zip",
    strip_prefix = "folly-2025.04.21.00",
    build_file = "third_party/folly.BUILD",
    integrity = "sha256-5mVMfuei8WLU+T1Iu0S8x7q1d7Ewi1fGVDud0z5n6nA=",
)

bazel_dep(name = "openssl", version = "3.3.1.bcr.1")
bazel_dep(name = "libevent", version = "2.1.12-stable.bcr.0")
bazel_dep(name = "fast_float", version = "6.1.6")
bazel_dep(name = "double-conversion", version = "3.3.0")
bazel_dep(name = "boost.smart_ptr", version = "1.87.0")
bazel_dep(name = "boost.filesystem", version = "1.87.0")
bazel_dep(name = "boost.system", version = "1.87.0")
bazel_dep(name = "boost.regex", version = "1.87.0")
bazel_dep(name = "boost.thread", version = "1.87.0")
bazel_dep(name = "boost.context", version = "1.87.0")
bazel_dep(name = "boost.program_options", version = "1.87.0")